# arxivify

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/arxivify/: arguments.py  cleaner.py  cli.py  file_utils.py  latex.py  logger.py  main.py
